--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -1,11 +1,14 @@
-<table class="table">
+<button class="btn btn-primary float-right">Add</button>
+<div class="well">
+  <table class="table table-striped table-hover">
     <thead class="thead-dark">
       <tr>
-        <th scope="col">Id</th>
+        <th scope="col">Sr. No</th>
         <th scope="col">Name</th>
         <th scope="col">Email</th>
         <th scope="col">Contact Number</th>
         <th scope="col">Address</th>
+        <th scope="col">Actions</th>
       </tr>
     </thead>
     <tbody>
@@ -15,6 +18,12 @@
         <td>{{ user.Email }}</td>
         <td>{{ user.ContactNumber }}</td>
         <td>{{ user.Address }}</td>
+        <td>
+          <button class="btn btn-primary" (click)="editUser(user)">Edit</button>
+          <button class="btn btn-danger">Delete</button>
+        </td>
       </tr>      
     </tbody>
   </table>
+</div>
+
